--- a/A_Maze_Balls/A-Maze-Balls/A-Maze-Balls/A-Maze-Balls-Info.plist
+++ b/A_Maze_Balls/A-Maze-Balls/A-Maze-Balls/A-Maze-Balls-Info.plist
@@ -24,8 +24,8 @@
 	<string>1.0</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
-	<key>NSMainNibFile</key>
-	<string>HomeViewController</string>
+	<key>UIMainStoryboardFile</key>
+	<string>RootStoryboard</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
